--- a/innovatex/src/app/components/planes/planes.component.html
+++ b/innovatex/src/app/components/planes/planes.component.html
@@ -1,4 +1,7 @@
-<div class="container py-5 text-center">
+<section class="py-4 bg-warning text-dark text-center">
+  <strong>Promoción de mayo:</strong> todos los planes con <span class="fw-bold">20% de descuento</span>. ¡No te lo pierdas!
+</section>
+<div id="planes" class="container py-5 text-center">
   <h2 class="mb-4">Nuestros planes</h2>
   <div class="row">
     <div class="col-md-4" *ngFor="let plan of planes">
