--- a/innovatex/src/app/components/dashboard/dashboard.component.html
+++ b/innovatex/src/app/components/dashboard/dashboard.component.html
@@ -1,21 +1,25 @@
-<div class="container py-5">
+<div class="container py-4">
   <h2 class="mb-4">Ventas realizadas</h2>
-  <table class="table table-dark table-striped table-bordered table-hover">
+  <table class="table table-white table-striped table-bordered table-hover">
     <thead>
       <tr>
         <th>ID</th>
         <th>Fecha</th>
         <th>Plan</th>
+        <th>Comprador</th>
         <th>Monto</th>
         <th>Método</th>
         <th>Estado</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody><tr *ngIf="ventas.length === 0">
+  <td colspan="7" class="text-center">Aún no hay ventas registradas.</td>
+</tr>
       <tr *ngFor="let venta of ventas">
         <td>{{ venta.id }}</td>
         <td>{{ venta.fecha | date:'short' }}</td>
         <td>{{ venta.plan }}</td>
+        <td>{{ venta.comprador }}</td>
         <td>$ {{ venta.monto }}</td>
         <td>{{ venta.metodo }}</td>
         <td>{{ venta.estado }}</td>
