--- a/innovatex/src/app/components/dashboard/dashboard.component.scss
+++ b/innovatex/src/app/components/dashboard/dashboard.component.scss
@@ -1,11 +1,13 @@
 /* dashboard-pagos.component.css */
-.table-responsive {
-  max-height: 600px;
-  overflow-y: auto;
-}
-
-.badge {
-  font-size: 0.9em;
+.container {
+  .btn {
+    transition: all 0.3s ease;
+    
+    &:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+  }
 }
 .grafico-container {
   display: flex;
