--- a/innovatex/src/app/components/planes/planes.component.html
+++ b/innovatex/src/app/components/planes/planes.component.html
@@ -1,13 +1,23 @@
-<ng-container *ngIf="auth.user$ | async as user; else loginAlert">
-  <div class="planes-container">
-    <div *ngFor="let plan of planes" class="plan-card">
-      <h2 class="plan-title">{{ plan.nombre | titlecase }}</h2>
-      <p class="plan-description">{{ plan.descripcion }}</p>
-      <button class="buy-button" (click)="buy(plan)">Adquirir</button>
+<ng-container id="planes" *ngIf="auth.user$ | async as user; else loginAlert">
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div *ngFor="let plan of planes" class="col-md-6 col-lg-4 d-flex">
+        <div class="card mb-4 shadow-sm w-100">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title text-center">{{ plan.nombre | titlecase }}</h5>
+            <p class="card-text text-muted text-center">{{ plan.descripcion }}</p>
+            <div class="mt-auto text-center">
+              <button class="btn btn-primary w-75" (click)="buy(plan)">Adquirir</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </ng-container>
 
-<ng-template #loginAlert>
-  <button (click)="showLoginAlert()">Ver planes</button>
+<ng-template  #loginAlert>
+  <div  class="d-flex justify-content-center align-items-center" style="height: 50vh;">
+    <button class="btn btn-primary btn-lg" (click)="showLoginAlert()">Ver planes</button>
+  </div>
 </ng-template>
