--- a/innovatex/src/app/components/services/services.component.html
+++ b/innovatex/src/app/components/services/services.component.html
@@ -11,7 +11,7 @@
         <ul>
           <li *ngFor="let detail of s.details">✔ {{ detail }}</li>
         </ul>
-        <button mat-stroked-button color="primary">Ver más</button>
+        <button mat-stroked-button class="button">Ver más</button>
       </div>
     </div>
   </div>
