--- a/innovatex/src/app/components/suscripciones/basico/basico.component.html
+++ b/innovatex/src/app/components/suscripciones/basico/basico.component.html
@@ -14,7 +14,7 @@
           <li class="list-group-item">✔ Automatización de procesos empresariales</li>
         </ul>
 
-        <button class="btn btn-outline-primary" onclick="window.history.back()">← Volver</button>
+        <button class="btn btn-outline-primary" (click)="goHome()">← Volver</button>
       </div>
     </div>
   </div>
