--- a/innovatex/src/app/components/planes/planes.component.scss
+++ b/innovatex/src/app/components/planes/planes.component.scss
@@ -13,7 +13,9 @@ background: linear-gradient(to right, #0d47a1, #1976d2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   }
 }
-
+.adquirir{
+  width: 100%;
+}
 .card-title {
   font-weight: 600;
   
