--- a/innovatex/src/app/components/buttom/buttom.component.html
+++ b/innovatex/src/app/components/buttom/buttom.component.html
@@ -1,3 +1,8 @@
-<button class="btn btn-primary position-fixed bottom-0 end-0 m-4 shadow" style="z-index: 1050;" (click)="scrollToPlanes()">
-  Adquirí ahora
-</button>
+<a
+  href="https://wa.me/1164115327"  
+  target="_blank"
+  class="btn btn-success position-fixed bottom-0 end-0 m-4 shadow d-flex align-items-center gap-2"
+  style="z-index: 1050;"
+>
+  <i class="bi bi-whatsapp fs-4"></i>Contactanos
+</a>
