--- a/innovatex/src/app/components/planes/planes.component.scss
+++ b/innovatex/src/app/components/planes/planes.component.scss
@@ -1,26 +1,4 @@
-.container{
-background: linear-gradient(to right, #0d47a1, #1976d2);
-  width: 100%;
-  border-radius: 1rem;
+.fondo{
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4));
 }
 
-.card {
-  border-radius: 1rem;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-
-  &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  }
-}
-.adquirir{
-  width: 100%;
-}
-.card-title {
-  font-weight: 600;
-  
-}
-
-.btn-dark {
-  border-radius: 2rem;
-}
