--- a/innovatex/src/app/components/dashboard/dashboard.component.html
+++ b/innovatex/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grafico-container d-flex flex-column flex-lg-row gap-5 align-items-center justify-content-center py-5 bg-dark text-light rounded-4 shadow-lg">
+<div class="grafico-container d-flex flex-column flex-lg-row gap-5 align-items-center justify-content-center py-5 bg-dark text-light shadow-lg">
   <div class="grafico-pastel p-4 bg-secondary bg-opacity-10 rounded-4 shadow">
     <canvas
       baseChart
