--- a/innovatex/src/app/components/dashboard/dashboard.component.scss
+++ b/innovatex/src/app/components/dashboard/dashboard.component.scss
@@ -2,6 +2,9 @@
   background: linear-gradient(145deg, #0d1117, #161b22);
   border: 1px solid rgba(255, 255, 255, 0.05);
 }
+.grafico-pastel{
+  max-height: 500px;
+}
 
 .table-responsive {
   background-color: rgba(255, 255, 255, 0.02);
