--- a/innovatex/src/app/components/layout/layout.component.html
+++ b/innovatex/src/app/components/layout/layout.component.html
@@ -3,7 +3,7 @@
     <app-services></app-services>
      <app-planes/>
      <app-buttom/>
-        
+    <app-dashboard></app-dashboard>
     <app-testimonios/>
     
 <app-footer></app-footer>
